--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Lobster', cursive;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     background-color: rgb(226, 220, 200);
 
