--- a/style.css
+++ b/style.css
@@ -130,13 +130,50 @@ margin-top: 0;
 
  }
 
- #nuestro-catalogo .carta{
-
-
- }
-.carta:first-child{
-    
+#nuestros-programas .carta{
+    background-position: center center;
+    background-size: cover;
+    padding: 50px 0px;
+    margin: 30px;
+    border-radius: 15px;
 }
- 
 
- 
+ .carta:first-child{
+    background-image:linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url("media/otro.jpeg");
+ }
+
+.carta:nth-child(2){
+    background-image:linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url("media/iplay.jpeg");  
+}
+
+ .carta:nth-child(3){
+    background-image:linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url("media/lio.jpeg");
+ }
+
+ .carta:nth-child(4){
+    background-image:linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+    ,url("media/wonder.jpeg");
+ }
+ #caracteristicas .container{
+    text-align: center;
+    padding: 250px 12px;
+}
