--- a/registro.css
+++ b/registro.css
@@ -4,4 +4,77 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    background: url(/media/fondo.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+}
+h1{
+    color: black ;
+}
+p{
+    text-align: center;
+    color: black;
+}
 
+
+.container{
+    width: 100%;
+    padding: 15px;
+}
+.formulario{
+    background: #fff;
+    margin-top: 150px;
+    padding: 3px;
+}
+h1{
+    text-align: center;
+    color: black;
+    font-size: 40px;
+}
+
+input[type="text"],
+input[type="password"] {
+font-size: 15px;
+width: 82%;
+padding: 10px;
+border: none;
+}
+
+.input-container{
+    margin-bottom: 15px;
+    border: 1px solid #aaa;
+}
+.button{
+    border: none;
+    width: 100%;
+    color: white;
+    font-size: 20px;
+    background: rgb(15, 61, 62);
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.button:hover{
+    background: cadetblue;
+}
+.link{
+    text-decoration: none;
+    color:black;
+    font-weight: 600;
+
+    
+}
+.link:hover{
+    color: cadetblue;
+}
+@media(min-width: 720px){
+    .formulario{
+        margin: auto;
+        width: 500px;
+        margin-top: 150px;
+        border-radius: 2%;
+    }
+}
